Import of MAHNKONG/RPM-Info-1.05 from CPAN.
gitpan-cpan-distribution: RPM-Info
gitpan-cpan-version:      1.05
gitpan-cpan-path:         MAHNKONG/RPM-Info-1.05.tar.gz
gitpan-cpan-author:       MAHNKONG
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,3 +3,5 @@
 2003-10-30
 	changed name of package from Info to RPM::Info
 	changed perldoc layout
+2003-12-08
+	added methods "getRpmInfoRaw" and "getRpmDependents"
